# strata

./: .gitattributes  Cargo.toml  Justfile  LICENSE  README.md  lefthook.yml
.github/workflows/: ci.yml  nightly.yml  pages.yml
crates/mantle-artifact/: Cargo.toml
crates/mantle-artifact/src/: artifact.rs  constants.rs  error.rs  fields.rs  ids.rs  (+4 more)
crates/mantle-runtime/: Cargo.toml
crates/mantle-runtime/src/: cli.rs  event.rs  host.rs  lib.rs  limits.rs  program.rs  report.rs  run.rs  tests.rs
crates/mantle-runtime/src/event/: jsonl.rs
crates/mantle-runtime/tests/: product_gates.rs
crates/strata/: Cargo.toml
crates/strata/src/: cli.rs  language.rs  lib.rs
crates/strata/src/language/: ast.rs  checked.rs  checker.rs  diagnostic.rs  lexer.rs  lowering.rs  parser.rs  tests.rs
crates/strata/src/language/checker/: outputs.rs  state_space.rs  static_validation.rs  symbols.rs
docs/: book.toml  file-types.md
docs/src/: README.md  SUMMARY.md  artifact-runtime-boundary.md  development-gates.md  diagnostics.md  examples.md  file-types.md  getting-started.md  implementation-architecture.md  language-concepts.md  language-reference.md  runtime-traces.md  source-to-runtime-gates.md  syntax-reference.md  tutorial-actors-and-messages.md  tutorial-hello.md
examples/: actor_instances.str  actor_ping.str  actor_sequence.str  hello.str
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mantle_artifact_decode.rs  mantle_runtime_from_source.rs  strata_parse_check_lower.rs
src/: artifact.rs  cli.rs  language.rs  lib.rs  runtime.rs
tests/: first_gate.rs
tools/mime/: strata.xml
tools/vscode-strata/: package.json
