[package]
name = "strata"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
mantle-artifact = { path = "../mantle-artifact" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", default-features = false, features = ["fs"] }

[lib]
name = "strata"
path = "src/lib.rs"

[[bin]]
name = "strata"
path = "src/bin/strata.rs"
